Working on the actions column

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.github.alejojperez</groupId>
             <artifactId>pi-gpio</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.5</version>
         </dependency>
 
         <dependency>
@@ -40,5 +40,18 @@
             <version>8.9</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
